Updates at at 03/03/2020 12:40GMT

--- a/src/main/webapp/pages/extension_officer/extension_officer.xhtml
+++ b/src/main/webapp/pages/extension_officer/extension_officer.xhtml
@@ -19,7 +19,7 @@ and open the template in the editor.
     <h:body>
         <ui:composition template="./../../resources/templates/main_template.xhtml">
             <ui:define name="title">
-                <title>AeHS - Extension Offices</title>
+                <title>AeHS - District Extension Offices</title>
             </ui:define>
 
             <ui:define name="screenName">
@@ -27,7 +27,7 @@ and open the template in the editor.
             </ui:define>
 
             <ui:define name="content-title">
-                <h1 class="mt-4">Extension Officer</h1>
+                <h1 class="mt-4">District Extention Officer</h1>
             </ui:define>
 
             <ui:define name="sysad_feature"></ui:define>
