--- a/src/main/webapp/pages/manage_predictions.xhtml
+++ b/src/main/webapp/pages/manage_predictions.xhtml
@@ -50,7 +50,7 @@ and open the template in the editor.
                                 <h:outputText value="#{manage_prediction.inputParam4}"/>
                             </p:column>
                             <p:column headerText="Prediction">
-                                <h:outputText value="#{manage_prediction.prediction.name}"/>
+                                <h:outputText value="#{manage_prediction.diseaseName}"/>
                             </p:column>
                             <p:column headerText="Farm">
                                 <h:outputText value="#{manage_prediction.farmDetail.name}"/>
