--- a/src/main/webapp/pages/system_admin/system_admin.xhtml
+++ b/src/main/webapp/pages/system_admin/system_admin.xhtml
@@ -20,7 +20,7 @@ and open the template in the editor.
     <h:body>
         <ui:composition template="./../../resources/templates/main_template.xhtml">
             <ui:define name="title">
-                <title>AeHS - System Administrator</title>
+                <title>AeHS - Regional Extention Officer</title>
             </ui:define>
 
             <ui:define name="screenName">
@@ -28,7 +28,7 @@ and open the template in the editor.
             </ui:define>
 
             <ui:define name="content-title">
-                <h1 class="mt-4">System Administrator</h1>
+                <h1 class="mt-4">Regional Extention Officer</h1>
             </ui:define>
 
 
