Updates as at 03/03/2020 13:35GMT

--- a/src/main/webapp/pages/register_user.xhtml
+++ b/src/main/webapp/pages/register_user.xhtml
@@ -81,7 +81,7 @@ and open the template in the editor.
                                                  styleClass="form-control" id="sysUserRole" 
                                                  value="#{systemUserController.selectedRole}"
                                                  required="#{!empty param['saveUser']}" 
-                                                 requiredMessage="*required"/>
+                                                 requiredMessage="*required">
                                 <f:selectItems value="#{commonOptions.userRoleOptions}"/>
                                 </h:selectOneMenu>
                                 <h:message for="sysUserRole" class="errorMessage"/>
